# marcscloud

./: .gitignore  CNAME  ContosoWater.html  README.md  RollsRoyceServices.html  Website.html  homepage.html  index.html  water_account_closure_payment_screen.html  yorkshirewater.html
ccass-conversations/: .env.example  .gitignore  README.md  pyproject.toml
mcp-dataverse-server/: .gitignore  README.md  pyproject.toml
mcp-dataverse-server/scripts/: explore_conversations.py  explore_transcript_fields.py  extract_filter_keys.py  extract_fspp_inbag_shape.py  extract_sa_load_and_get_resources_snippet.py  extract_setlookupobject_snippet.py  extract_systemjobtype_values.py  find_bookingsetup_in_metadata.py  find_chat_messages.py  find_requirement_booking_setup_metadata_attr.py  find_webresources_for_fspp.py  find_workorder_requirements.py  get_booking_record.py  get_conversation_transcript.py  get_transcript_content.py  inspect_action_csdl.py  inspect_bookingsetupmetadata_fields.py  inspect_complex_types.py  inspect_metadata.py  inspect_scheduleboardsetting_fields.py  inspect_search_resource_availability_response_csdl.py  list_availability_actions.py  list_bookingsetupmetadata.py  list_fps_actions.py  parse_conversation_transcript.py  repro_booking_failure.py  resolve_entityset.py  run_end_to_end_demo.py  search_metadata.py  test_availability_action.py  test_booking_with_records.py  test_existing_booking.py  test_fspp_get_resource_availability.py  test_retrieve_resource_availability.py  test_retrieve_resource_availability2.py  test_sa_load_and_get_resources.py  (+4 more)
(+52 files in other folders)
